Support multiple scopes, besides "globals" Case: SVY-348